--- a/greenly/src/app/components/home/home.component.html
+++ b/greenly/src/app/components/home/home.component.html
@@ -166,7 +166,7 @@
             <div class="col-md-4 container-2">
                 <div class="card cursor-pointer">
                     <div class="imgBx">
-                        <img src="../../../assets/blue-water-9-inch-activated-carbon-filter.jpg"
+                        <img src="./assets/blue-water-9-inch-activated-carbon-filter.jpg"
                             alt="nike-air-shoe">
                     </div>
 
@@ -181,7 +181,7 @@
             <div class="col-md-4 container-2">
                 <div class="card cursor-pointer">
                     <div class="imgBx">
-                        <img src="../../../assets/images.png"
+                        <img src="./assets/images.png"
                             alt="nike-air-shoe" class="w-50">
                     </div>
 
@@ -196,13 +196,13 @@
             <div class="col-md-4 container-2">
                 <div class="card cursor-pointer">
                     <div class="imgBx">
-                        <img src="../../../assets/blue-water-9-inch-activated-carbon-filter.jpg"
-                            alt="nike-air-shoe">
+                        <img src="./assets/bike.png"
+                            alt="nike-air-shoe" class="w-75">
                     </div>
 
                     <div class="contentBx">
 
-                        <h2>Activated Carbon Filters</h2>
+                        <h2>Electric Bike</h2>
                         <a class="cursor-pointer">Buy Now</a>
                     </div>
 
@@ -210,6 +210,9 @@
             </div>
         </div>
     </div>
+</section>
+<section>
+    
 </section>
 <section class="p-5 mb-5">
     <div class="container">
