--- a/greenly/src/app/components/home/home.component.css
+++ b/greenly/src/app/components/home/home.component.css
@@ -369,6 +369,6 @@ h4::before{
     transform: translateY(0px);
     transition-delay: .7s;
 }
-.testimonial-section{
-    background-color: rgba(0, 150, 0, 0.3);
+.stats-section{
+    background-color: rgba(0, 190, 0, 0.3);
 }
