--- a/greenly/src/app/components/manage-licences/manage-licences.component.html
+++ b/greenly/src/app/components/manage-licences/manage-licences.component.html
@@ -15,6 +15,20 @@
                         </div>
                         <span class="text-secondary small">{{licence.createdAt | date }}</span>
                     </div>
+                    <div class="my-3">
+                        <div>
+                        <p class="text-secondary ">Email: {{licence.email}}</p>
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center">
+                            @if(licence.status === 'pending') {
+                            <p class="text-black fw-bold">Status: <span class="text-secondary">{{licence.status.toUpperCase()}}</span></p>
+                            }@else if (licence.status === 'rejected') {
+                            <p class="text-black fw-bold">Status: <span class="text-danger">{{licence.status.toUpperCase()}}</span></p>
+                            }@else if (licence.status === 'approved') {
+                            <p class="text-black fw-bold">Status: <span class="text-success">{{licence.status.toUpperCase()}}</span></p>
+                            }
+                        </div>
+                    </div>
                     <div class="d-flex justify-content-center align-items-center mt-3">
                         <button class="btn btn-success text-white special-font d-block w-50 py-2 rounded-5"
                             [routerLink]="['/admin/manage-specific-licence', licence._id]">View Details</button>
